--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -1,1 +1,10 @@
-
+spring :
+  mvc :
+    view :
+      prefix : /WEB-INF/html/
+      suffix : .html
+  devtools :
+    livereload :
+      enabled : true
+    thymeleaf : 
+      cache : false 
