--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -22,6 +22,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 	//implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
 
 	compileOnly 'org.projectlombok:lombok'
